# sunshineagent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: ClaudeCode源码解读-agent架构.md  architecture-analysis.md  audit-report.md  python-agent-development-plan.md  worker-isolation-plan.md
prompts/: anthropic.txt  default.txt  generate_agent.txt  gpt.txt  trinity.txt
src/: __init__.py
src/agent/: __init__.py  agent.py  builtins.py  executive.py  loop.py  permissions.py  worker_lifecycle.py  workers.py
src/background/: __init__.py
src/channels/: __init__.py  base.py  config.py  logger.py  manager.py
src/cli/: __init__.py  main.py  permission_ui.py  prompt.py  queue.py  status_bar.py
src/config/: __init__.py  config.py  provider.py
src/context/: __init__.py  context_filter.py  token.py  worker_context.py  worker_isolation.py
src/mcp/: __init__.py
src/models/: __init__.py  database.py  message.py  session.py
src/prompt/: __init__.py  engine.py
src/prompts/: anthropic.txt  beast.txt  codex.txt  deepseek.txt  default.txt  executive_plan.txt  executive_reflection.txt  gemini.txt
src/provider/: __init__.py  anthropic_client.py  base.py  catalog.py  factory.py  openai_client.py  registry.py  router.py
src/router/: __init__.py
src/session/: __init__.py  compaction.py  coordinator.py  service.py
src/skill/: __init__.py
src/task_graph/: __init__.py  graph.py
tests/: conftest.py  test_agent.py  test_audit.py  test_executive.py  test_phase3.py  test_provider.py  test_session.py  test_task_graph.py  test_tools.py
(+28 files in other folders)
